<?xml version="1.0"?>

<resources>

    <string name="app_name">Flickr Public Feed</string>

    <string name="FPF_RECORD_IMAGE_SAMPLE">Super fajny obrazek</string>

    <string name="FPF_RECORD_TAG_SAMPLE">super, fajny, obrazek</string>

    <string name="FPF_RECORD_IMAGE_DESC">Main image</string>

    <string name="FPF_RECORD_DATA_SAMPLE">12.12.2019</string>

    <string name="FPF_MENU_ADD">add record</string>

    <string name="FPF_ADD_URL">Image URL</string>

    <string name="FPF_ADD_NAME">Image Name</string>

    <string name="FPF_ADD_BUTTON">Add</string>

    <string name="FPF_ADD_TAGS">Tags, separated with ; without space</string>
    <string name="FPF_ADD_DATE">Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FPF_CORRECT_MASS">Give correct name!</string>
    <string name="FPF_CORRECT_URL">Give correct URL!</string>
    <string name="FPF_CHOOSE_DATE">Choose date!</string>
    <string name="FPF_DATE_FORMAT">dd.MM.yyyy</string>
    <string name="FPF_ADD_TOAST_TEXT">Added!</string>
    <string name="FPF_DELETE_COLOR">#f44336</string>
    <string name="FPF_PLACEHOLDER_TEXTVIEW">TextView</string>
    <string name="FPF_NAME">Name:</string>
    <string name="FPF_TAGS">Tags:</string>
    <string name="FPF_DATE">Date:</string>
    <string name="FPF_BIG_PICTURE_DESC">Big picture</string>

</resources>