<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/FPF_ADD_NAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageNameView" android:layout_marginTop="@dimen/FPF_MARGIN_TOP"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/FPF_MARGIN_START" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/FPF_MARGIN_END"
            app:layout_constraintTop_toBottomOf="@+id/imageURLEdit" android:textSize="18sp"/>
    <EditText
            android:layout_width="@dimen/FPF_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageNameEdit" android:layout_marginStart="@dimen/FPF_MARGIN_START"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="@dimen/FPF_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/imageNameView" android:layout_marginEnd="@dimen/FPF_MARGIN_END"
            app:layout_constraintHorizontal_bias="0.0" android:autofillHints="" tools:ignore="LabelFor"
            tools:targetApi="o"/>
    <Button
            android:text="@string/FPF_ADD_BUTTON"
            android:layout_width="@dimen/FPF_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:id="@+id/addImage" android:layout_marginBottom="@dimen/FPF_MARGIN_BOTTOM"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/FPF_MARGIN_END" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/FPF_MARGIN_START"/>
    <TextView
            android:text="@string/FPF_ADD_URL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageURLView" android:layout_marginTop="@dimen/FPF_MARGIN_TOP"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/FPF_MARGIN_START" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/FPF_MARGIN_END"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="@dimen/FPF_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageURLEdit" android:layout_marginStart="@dimen/FPF_MARGIN_START"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="@dimen/FPF_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/imageURLView" android:layout_marginEnd="@dimen/FPF_MARGIN_END"
            android:autofillHints="" android:importantForAutofill="no" tools:targetApi="o" tools:ignore="LabelFor,TextFields"/>
    <TextView
            android:text="@string/FPF_ADD_DATE"
            android:layout_width="@dimen/FPF_WIDTH_MATCH"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageDateVIew"
            android:layout_marginStart="@dimen/FPF_MARGIN_START"
            android:layout_marginEnd="@dimen/FPF_MARGIN_END" android:textAlignment="center" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageNameEdit"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/imageDateButton"
            android:backgroundTint="@android:color/transparent" android:tint="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/FPF_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/imageDateVIew" android:layout_marginEnd="@dimen/FPF_MARGIN_END"
            android:layout_marginStart="@dimen/FPF_MARGIN_START" android:contentDescription="@string/FPF_ADD_DATE"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/imageDateCheck" app:layout_constraintVertical_bias="0.005" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageDateButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>